# Compiler

./: README.md  compiler.py  language_spec.md  lexer.py  my_lexer.py  my_parser.py  parser.py  pyproject.toml  run_tests.py  schemas.py  semantic_analyzer.py  tmp_mr.txt  tmp_pa.mr  vm_spec.md
VM/: .gitignore  lexer.cc  maszyna-wirtualna
output/: error_call_before_definition.out  error_for_iterator_modified.out  error_write_to_const_param.out  example1.mr  example1.out  example2.out  example3.out  example6.out  example7.out  example8.out  mfee  minrepro_euclid.imp  minrepro_euclid.mr  minrepro_proc_const.imp  minrepro_proc_const.mr  minrepro_proc_euclid.imp  minrepro_proc_euclid.mr  myexample.out  program1.out
src/: README.md  code_generator.py  compiler.py  my_lexer.py  my_parser.py  peephole_optimizer.py  schemas.py  semantic_analyzer.py
tests/: conftest.py  efficency  efficency.md  error_pass_scalar_to_array_param.imp  helpers.py  test_arithmetic.py  test_compiler_fixtures.py  test_divmod.py  test_example1_runtime.py  test_example2_runtime.py  test_example3_runtime.py  test_example4_runtime.py  test_example5_runtime.py  test_example6_runtime.py  test_example7_runtime.py  test_example8_runtime.py  test_example9_runtime.py  test_exampleA_runtime.py  test_example_perf_runtime.py  test_example_pow_runtime.py  test_myexample.py  test_peephole_optimizer.py  test_programs_runtime.py
tests/fixtures/: error_array_bad_range.imp  error_call_before_definition.imp  error_const_param_write.imp  error_for_bound_mutation.imp  error_for_iterator_modified.imp  myexample.imp  (+10 more)
